# mqtt-tools

./: .gitignore  .mailmap  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE.txt  Makefile  README.md  Readme.md  Readme.txt  mosqagent.c  mosqagent.h  mosqhelper.c  mosqhelper.h  mqtt-clock.c  mqtta-build.h.in
agents/: CMakeLists.txt  mqtt-clock.c  mqtta-config
include/mqtt-tools/: CMakeLists.txt  mosqhelper.h  mqtta-build.h.in  mqtta.h
lib/: CMakeLists.txt  mosqhelper.c  mqtta.c
test/: CMakeLists.txt  mqtta-test-basic.c  mqtta-test-null.c
